--- a/form_fwk/BUILD.gn
+++ b/form_fwk/BUILD.gn
@@ -105,7 +105,7 @@ ohos_shared_library("libfms") {
     "bundle_framework:appexecfwk_core",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
-    "device_manager_base:devicemanagersdk",
+    "device_manager:devicemanagersdk",
     "device_usage_statistics:usagestatsinner",
     "distributeddatamgr:distributeddata_inner",
     "eventhandler:libeventhandler",
