--- a/form_fwk/test/benchmarktest/form_manager_test/BUILD.gn
+++ b/form_fwk/test/benchmarktest/form_manager_test/BUILD.gn
@@ -14,7 +14,7 @@
 import("//build/test.gni")
 import("//foundation/ability/ability_runtime/form_fwk/form_fwk.gni")
 
-module_output_path = "ability_runtime/interfaces"
+module_output_path = "aafwk_standard/interfaces"
 
 ohos_benchmarktest("BenchmarkTestForFormManager") {
   module_out_path = module_output_path
@@ -38,8 +38,7 @@ ohos_benchmarktest("BenchmarkTestForFormManager") {
     "ipc:ipc_core",
     "utils_base:utils",
   ]
-  resource_config_file =
-      "${form_fwk_path}/test/resource/benchmark/ohos_test.xml"
+  resource_config_file = "//foundation/ability/ability_runtime/test/resource/benchmark/ohos_test.xml"
 }
 
 group("benchmarktest") {
