--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -54,6 +54,7 @@ config("abilityms_config") {
     "${bgtaskmgr_interfaces_path}/innerkits/include",
     "${bgtaskmgr_frameworks_path}/common/include",
     "${bgtaskmgr_frameworks_path}/include",
+    "${bgtaskmgr_root_path}/utils/bgtask_observer/include",
   ]
 
   defines = [ "ABILITY_COMMAND_FOR_TEST" ]
@@ -107,7 +108,7 @@ ohos_shared_library("abilityms") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dataability:native_dataability",
-    "dsoftbus:softbus_client",
+    "dsoftbus_standard:softbus_client",
     "eventhandler:libeventhandler",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
