--- a/services/abilitymgr/test/BUILD.gn
+++ b/services/abilitymgr/test/BUILD.gn
@@ -148,7 +148,7 @@ ohos_source_set("abilityms_test_source") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dataability:native_dataability",
-    "dsoftbus:softbus_client",
+    "dsoftbus_standard:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
     "hitrace_native:hitrace_meter",
