--- a/services/abilitymgr/test/unittest/phone/ability_manager_service_anr_test/BUILD.gn
+++ b/services/abilitymgr/test/unittest/phone/ability_manager_service_anr_test/BUILD.gn
@@ -61,7 +61,7 @@ ohos_unittest("ability_manager_service_anr_test") {
   external_deps = [
     "ability_base:zuri",
     "access_token:libaccesstoken_sdk",
-    "dsoftbus:softbus_client",
+    "dsoftbus_standard:softbus_client",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
