--- a/services/abilitymgr/test/unittest/phone/running_infos_test/BUILD.gn
+++ b/services/abilitymgr/test/unittest/phone/running_infos_test/BUILD.gn
@@ -59,7 +59,7 @@ ohos_unittest("running_infos_test") {
     "ability_base:want",
     "ability_base:zuri",
     "common_event_service:cesfwk_innerkits",
-    "dsoftbus:softbus_client",
+    "dsoftbus_standard:softbus_client",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
