--- a/services/test/moduletest/ability_manager_service_dump_test/BUILD.gn
+++ b/services/test/moduletest/ability_manager_service_dump_test/BUILD.gn
@@ -61,7 +61,7 @@ ohos_moduletest("ability_manager_service_dump_test") {
     "ability_base:want",
     "ability_base:zuri",
     "common_event_service:cesfwk_innerkits",
-    "dsoftbus:softbus_client",
+    "dsoftbus_standard:softbus_client",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
   ]
