--- a/services/test/moduletest/on_new_want_module_test/BUILD.gn
+++ b/services/test/moduletest/on_new_want_module_test/BUILD.gn
@@ -86,7 +86,7 @@ ohos_moduletest("on_new_want_module_test") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dataability:native_dataability",
-    "dsoftbus:softbus_client",
+    "dsoftbus_standard:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
     "hitrace_native:hitrace_meter",
