--- a/services/test/moduletest/panding_want_manager_test/BUILD.gn
+++ b/services/test/moduletest/panding_want_manager_test/BUILD.gn
@@ -78,7 +78,7 @@ ohos_moduletest("PandingWantMgrTest") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "dataability:native_dataability",
-    "dsoftbus:softbus_client",
+    "dsoftbus_standard:softbus_client",
     "hicollie_native:libhicollie",
     "hisysevent_native:libhisysevent",
     "hitrace_native:hitrace_meter",
