--- a/frameworks/js/napi/aafwk/particleAbility/BUILD.gn
+++ b/frameworks/js/napi/aafwk/particleAbility/BUILD.gn
@@ -54,12 +54,12 @@ ohos_shared_library("particleability") {
     "ability_runtime:napi_base_context",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "dataability:native_dataability",
     "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
     "relational_store:native_appdatafwk",
+    "relational_store:native_dataability",
     "relational_store:native_rdb",
     "relational_store:rdb_data_share_adapter",
     "utils_base:utils",
